# gmx

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/ghostreelite/: Cargo.toml
crates/ghostreelite/src/: config.rs  discovery.rs  display.rs  logic.rs  main.rs  worktree.rs
crates/ghostty-lib/: Cargo.toml
crates/ghostty-lib/src/: cmd.rs  ghostty.rs  lib.rs  remote.rs  state.rs  worktree.rs  zmx.rs
crates/ghostty-lib/tests/: state_integration.rs
crates/gmx/: Cargo.toml
crates/gmx/src/: config.rs  main.rs  session.rs
crates/gmx/tests/: session_naming.rs
src/: cmd.rs  config.rs  discovery.rs  display.rs  ghostty.rs  main.rs  state.rs  worktree.rs  zmx.rs
