[package]
name = "ghostreelite"
version = "0.1.0"
edition = "2024"

[dependencies]
ghostty-lib = { path = "../ghostty-lib" }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
skim = { version = "4.0.0", default-features = false }
